# tscode

./: .gitignore  Cargo.toml  README.md  install.sh
.github/: RELEASE_NOTES.md
.github/workflows/: release.yml
docs/: IMPLEMENTATION_STATUS.md  PRD.md  SDD.md  SRS.md
src/: app.rs  fs_tree.rs  lsp.rs  main.rs  shell.rs  syntax.rs  ui.rs
