[package]
name = "tscode"
version = "0.1.0"
edition = "2024"
description = "SSH-friendly VS Code-style terminal workspace built with Rust and ratatui"
license = "MIT"
repository = "https://github.com/hungryZoo/tscode"
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "editor", "ssh"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.1"
serde_json = "1.0.150"
syntect = "5.3.0"
unicode-width = "0.2.2"
vt100 = "0.16.2"

[package.metadata.deb]
maintainer = "hungryZoo"
copyright = "2026 hungryZoo"
license-file = ["LICENSE", "0"]
section = "devel"
priority = "optional"
extended-description = """
tscode is a VS Code-inspired terminal workspace for SSH sessions.
It provides a mouse-first file explorer, tabbed code viewer with syntax
highlighting, and a command-executing integrated terminal panel.
"""
assets = [
    ["target/release/tscode", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tscode/README.md", "644"],
    ["LICENSE", "usr/share/doc/tscode/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tscode", dest = "/usr/bin/tscode", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/tscode/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/tscode/LICENSE", mode = "644", doc = true },
]
